[project]
name = "kora"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.3.2",
    "flax==0.10.3",
    "jax==0.5.0",
    "optax==0.2.4",
    "transformers==4.49.0",
    "libtpu==0.0.10.1; sys_platform != 'darwin'",
    "matplotlib==3.10.1",
    "tensorflow==2.18.0",
    "wandb==0.19.8",
    "orbax-checkpoint==0.5.0",
]
